--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h4>Looking for help with research and writing?</h4>
 
-<p>These quick and practical tips were collaborively designed by students, faculty, librarians, and academic support staff across the UCLA campus. Let us know your <a href="https://goo.gl/forms/5mDfPqk838jzhB9X2" target="_blank">feedback and ideas for future projects</a>.</p>
+<p>These quick and practical tips were collaboratively designed by students, faculty, librarians, and academic support staff across the UCLA campus. Let us know your <a href="https://goo.gl/forms/5mDfPqk838jzhB9X2" target="_blank">feedback and ideas for future projects</a>.</p>
 
 {% for post in site.posts reversed %}
 
