--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
       <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300|PT+Serif" rel="stylesheet">
       <link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+      <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     
       <link href="//fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
       <!--Font Awesome-->
