--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -25,7 +25,7 @@
                     <a class="page-scroll" href="#for-instructors">For Instructors</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="{{ site.baseurl }}/categories">All Strategies</a>
+                    <a class="page-scroll" href="{{ site.baseurl }}/categories">All Tutorials</a>
                 </li>
                  <li>
                     <a class="page-scroll" href="#open">Open Access</a>
