--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -12,7 +12,10 @@ layout: default
 <!-- Create cards -->
 {% for post in site.categories[page.title] reversed %}
 <div class="row">
-    <div class="col s12">
+    <div class="col s3">
+        <p>test</p>
+    </div>
+    <div class="col s9">
       <div class="card">
         <div class="card-content">
             <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
