--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1 style="text-transform: none;">Strategies for Research and Writing<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
+            <h1 style="text-transform: none;">"WI+RE: Strategies for Research and Writing"<!-- once we have decided on a new title change this to {{ site.title }} --></h1>
             <hr>
             <p>Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA.<!-- once we have decided on a new site.title and site.description change this to {{ site.description }} --></p>
             <!--<a href="#services" class="btn btn-primary btn-xl page-scroll">Get Started!</a>-->
