--- a/_includes/front-nav.html
+++ b/_includes/front-nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Strategies for Research &amp; Writing</a>
+            <a class="navbar-brand page-scroll" href="#page-top">WI+RE: Strategies for Research &amp; Writing</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
