--- a/_includes/front-header.html
+++ b/_includes/front-header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1 style="text-transform: none;">WI+RE<br></h1>
-            <h3>Strategies for Research and Writing<!-- once we have decided on a new title change this to {{ site.title }} --></h3>
+            <h2>Writing Instruction + Research Education<!-- once we have decided on a new title change this to {{ site.title }} --></h2>
             <hr>
             <p>Quick and practical research and writing strategies, collaboratively designed by students, teachers, and librarians at UCLA.<!-- once we have decided on a new site.title and site.description change this to {{ site.description }} --></p>
             <!--<a href="#services" class="btn btn-primary btn-xl page-scroll">Get Started!</a>-->
