--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
     
       <link href="//fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
       <!--Font Awesome-->
-      <script src="https://use.fontawesome.com/c7408e4f19.js"></script>
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     
     
     <!-- Stylesheets -->
